<resources>
    <string name="app_name">TeamS355</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="play">PLAY</string>
    <string name="creative">CREATIVE</string>
    <string name="map_share">MAP SHARE</string>
    <string name="settings">SETTINGS</string>
    <string name="leaderboards">LEADERBOARDS</string>
    <string name="todo">TODO</string>
    <string name="play_map">PLAY MAP</string>
    <string name="thumb_controller">THUMB CONTROLLER</string>
    <string name="select_map">SELECT MAP</string>
</resources>