<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OmbreBackground"
    tools:context=".MainActivity"><![CDATA[

    "
        android:contentDescription="@string/todo" />

    ]]>

    <ImageView
        android:layout_width="168dp"
        android:layout_height="214dp"
        android:src="@drawable/ic_videogame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="0dp" />
=======
        app:layout_constraintTop_toBottomOf="parent"
        android:contentDescription="@string/todo" />
>>>>>>> d31eb5d0ea7133d80bacbb3817a8406d0dc26f56

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="411dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="?attr/colorPrimary"-->
<!--        app:layout_anchor="@+id/appBarLayout"-->
<!--        app:layout_anchorGravity="center"-->
<!--        app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    <Button
        android:id="@+id/playActivityBtn"
        android:layout_width="266dp"
        android:layout_height="60dp"
        android:layout_marginBottom="332dp"
        android:text="@string/play"
        android:textColorHighlight="#AD1C1C"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/creativeActivityBtn"
        android:layout_width="266dp"
        android:layout_height="60dp"
        android:layout_marginBottom="248dp"
        android:text="@string/creative"
        android:textColorHighlight="#AD1C1C"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mapShareActivityBtn"
        android:layout_width="266dp"
        android:layout_height="60dp"
        android:layout_marginBottom="164dp"
        android:text="@string/map_share"
        android:textColorHighlight="#AD1C1C"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/leaderboardsActivityBtn"
        android:layout_width="266dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:text="@string/leaderboards"
        android:textColorHighlight="#AD1C1C"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settingsActivityBtn"
        android:layout_width="266dp"
        android:layout_height="60dp"
        android:text="@string/settings"
        android:textColorHighlight="#AD1C1C"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />


    <!--    <Button-->
<!--        android:id="@+id/playActivityBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:text="Play"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/creativeActivityBtn"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

<!--    <Button-->
<!--        android:id="@+id/creativeActivityBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:text="Creative"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/mapShareActivityBtn"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.501"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/mapShareActivityBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:text="Map Share"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/leaderboardsActivityBtn"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/leaderboardsActivityBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:onClick="Leaderboards"-->
<!--        android:text="Leaderboards"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/settingsActivityBtn"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/settingsActivityBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="24dp"-->
<!--        android:text="Settings"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>